[tool.poetry]
name = "dagshub-test"
version = "0.1.0"
description = ""
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dagshub_test"}]

[tool.poetry.dependencies]
python = "^3.11"
dagshub = "^0.2.12"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
